--- a/canvas/practice2.html
+++ b/canvas/practice2.html
@@ -48,7 +48,7 @@ var wallWidth = 10; // Width of the wall image
 var wallHeight = 50; // Height of the wall image
 
 // Add the wall image URL here
-var wallImageURL = "barbed wire_processed.jpeg"; // Replace with the URL of the wall image
+var wallImageURL = "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/barbed wire_processed.jpeg"; // Replace with the URL of the wall image
 
 function startGame() {
     if (!gameRunning) {
